Changing Result button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,23 +17,23 @@
     <string name="minus">-</string>
     <string name="mult">x</string>
     <string name="div">/</string>
-    <string name="equal">ANSWER</string>
-    <string name="equal1">ADD</string>
-    <string name="equal3">SUBTRACT</string>
-    <string name="equal4">MULTIPLY</string>
-    <string name="equal5">DIVIDE</string>
-    <string name="equal6">ORDER</string>
-    <string name="equal7">LCM</string>
-    <string name="equal9">CUBE</string>
-    <string name="equal11">CUBEROOT</string>
-    <string name="equal12">SQUARE</string>
-    <string name="equal13">SQUAREROOT</string>
-    <string name="equal8">HCF</string>
+    <string name="equal">Result</string>
+    <string name="equal1">Result</string>
+    <string name="equal3">Result</string>
+    <string name="equal4">Result</string>
+    <string name="equal5">Result</string>
+    <string name="equal6">Result</string>
+    <string name="equal7">Result</string>
+    <string name="equal9">Result</string>
+    <string name="equal11">Result</string>
+    <string name="equal12">Result</string>
+    <string name="equal13">Result</string>
+    <string name="equal8">Result</string>
     <string name="equal10">.</string>
     <string name="table">Tables Number: </string>
     <string name="back">&lt; Back</string>
     <string name="hintq">Enter the Number</string>
-    <string name="equal2">SHOW TABLES</string>
+    <string name="equal2">Result</string>
     <string name="div2">"\u00F7"</string>
     <string name="inf">infiniy</string>
     <string name="exc1">Divisor exceeds maximum digits(4)</string>
