Slight change in the ui

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,7 +41,7 @@
     <string name="enter">Enter</string>
     <string name="hintq2">To Separate Numbers press Enter("\u21B2")</string>
 
-    <string name="m1">MULTIPLICATION TABLE</string>
+    <string name="m1">TABLES</string>
     <string name="m2">ADDITION</string>
     <string name="m3">SUBTRACTION</string>
     <string name="m4">MULTIPLICATION</string>
