--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -88,4 +88,13 @@
     <string name="dot">.</string>
     <string name="heading_lcm_of">LCM of %1$s</string>
     <string name="label_lcm_chain">LCM = %1$s = %2$s</string>
+
+    <!-- Newly added for HCF screen validation -->
+    <string name="error_max_digits_hcf">Maximum digits(%1$d) exceeded</string>
+    <string name="error_invalid_number_hcf">Invalid number: %1$s</string>
+    <string name="error_enter_numbers_first_hcf">Enter numbers first</string>
+    <string name="error_overflow_hcf">Result too large (overflow)</string>
+    <string name="heading_hcf_of">HCF of %1$s</string>
+    <string name="label_hcf">HCF/GCD : %1$s</string>
+    <string name="label_hcf_chain">HCF = %1$s = %2$s</string>
 </resources>
