--- a/app/src/debug/res/values/strings.xml
+++ b/app/src/debug/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!-- Debug-only override to force AdMob test banner unit ID -->
+    <!-- Debug-only overrides to force AdMob test unit IDs -->
     <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
+    <string name="native_ad_unit_id">ca-app-pub-3940256099942544/2247696110</string>
 </resources>
-
